# dotmod

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  appveyor.yml  pyproject.toml
.github/workflows/: codeql.yml  main.yml
modbot/: __init__.py  config.py  modbot.py
tests/: __init__.py  conftest.py  test_add.py  test_config.py  test_exceptions.py  test_modbot.py  test_remove.py
