[tool.poetry]
name = "modbot"
version = "0.1.0"
description = "CLI to add and remove dotfiles linked with Dotbot"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/modbot"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
dotbot = "^1.14"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
pytest-lazy-fixture = "^0.5.2"
pytest-mock = "^1.11"
pytest-sugar = "^0.9.2"
tox = "^3.14"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py{27,35,36,37}

[testenv]
skip_install = true
whitelist_externals = poetry
setenv = HOME = {env:HOME:home}
commands =
    poetry install
    poetry run pytest tests/ --cov=modbot
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
