[tool.poetry]
name = "modbot"
version = "0.1.0"
description = "CLI to add and remove dotfiles linked with Dotbot"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/modbot"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
dotbot = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
pytest-lazy-fixture = "^0.5.2"
pytest-mock = "^1.11"
pytest-sugar = "^0.9.2"
pre-commit = "^1.18"
tox = "^3.14"

[tool.black]
line-length = 88

[tool.isort]
known_third_party = ["dotbot", "pytest", "yaml"]
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = "True"
use_parentheses = "True"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py{27,35,36,37},lint

[testenv]
skip_install = true
whitelist_externals = poetry
setenv = HOME = {env:HOME:home}
commands =
    poetry install
    poetry run pytest tests/ --cov=modbot

[testenv:lint]
deps = pre-commit
commands =
    pre-commit install-hooks
    pre-commit run --all-files

[flake8]
ignore = E203, F401, W503
max-line-length = 88
select = B,C,E,F,W,T4,B9
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
