[tool.poetry]
name = "modbot"
version = "0.1.0"
description = "CLI to add and remove dotfiles linked with Dotbot"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/modbot"

[tool.poetry.dependencies]
python = "^3.6"
dotbot = "^1.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
pytest-lazy-fixture = "^0.6"
pytest-mock = "^3.6"
pytest-sugar = "^0.9"
pre-commit = "^2.1"
tox = "^3.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py{36,37,38,39},lint

[testenv]
skip_install = true
whitelist_externals = poetry
setenv = HOME = {env:HOME:home}
commands =
    poetry install
    poetry run pytest tests/ --cov=modbot

[testenv:lint]
deps = pre-commit
commands =
    pre-commit install-hooks
    pre-commit run --all-files

[flake8]
ignore = B950,E203,W503
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9
"""
